Fixed overflow by setting min-height: 0 on all-graphs-wrapper

--- a/spring-angular-evchargers-statistics/src/main/webapp/src/app/app.component.css
+++ b/spring-angular-evchargers-statistics/src/main/webapp/src/app/app.component.css
@@ -48,9 +48,10 @@
 
 #all-graphs-wrapper {
     width: 100%;
-    height: 100%;
     box-sizing: border-box;
     padding: 5px;
+
+    min-height: 0;
 }
 
 #all-graphs {
